[package]
name = "solana-snapshot-gpa"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Efficiently extract accounts from Solana snapshots"
authors = ["Yugure <yugure.crypto@gmail.com>"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[dependencies]
solana-snapshot-etl = "0.3.0"
clap = { version = "3.2.14", features = ["derive"] }
log = "0.4.17"
solana-runtime = "1.11.3"
thiserror = "1.0.31"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
solana-sdk = "1.11.3"
memmap2 = "0.5.5"
itertools = "0.10.3"
tar = "0.4.38"
zstd = "0.11.2"
bs58 = "0.4.0"
base64 = "0.13.1"
regex = "1.7.0"
hex = "0.4.3"

# Binary deps
borsh = { version = "0.9.3" }
crossbeam = { version = "0.8.2" }
csv = { version = "1.1.6" }
env_logger = { version = "0.9.0" }
indicatif = { version = "0.17.0-rc.11" }
libloading = { version = "0.7.3" }
num_cpus = { version = "1.13.1" }
reqwest = { version = "0.11.11", features = ["blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = { version = "1.0.82" }
solana-geyser-plugin-interface = { version = "1.11.3" }
solana-program = { version = "1.11.3" }
spl-token = { version = "3.3.0" }
json5 = { version = "0.4.1" }
